--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,39 @@
 ################################################################################
 
 /PTA_Train/Debug/PTA_Train.tlog/unsuccessfulbuild
+/PTA_Train/Debug/PTA_Train.tlog/PTA_Train.lastbuildstate
+/PTA_Train/Debug/PTA_Train.tlog/link.write.1.tlog
+/PTA_Train/Debug/PTA_Train.tlog/link.read.1.tlog
+/PTA_Train/Debug/PTA_Train.tlog/link.command.1.tlog
+/PTA_Train/Debug/PTA_Train.tlog/link.108276.write.1.tlog
+/PTA_Train/Debug/PTA_Train.tlog/link.108276.read.1.tlog
+/PTA_Train/Debug/PTA_Train.tlog/link.108276-rc.write.1.tlog
+/PTA_Train/Debug/PTA_Train.tlog/link.108276-rc.read.1.tlog
+/PTA_Train/Debug/PTA_Train.tlog/link.108276-cvtres.write.1.tlog
+/PTA_Train/Debug/PTA_Train.tlog/link.108276-cvtres.read.1.tlog
+/PTA_Train/Debug/PTA_Train.tlog/CL.write.1.tlog
+/PTA_Train/Debug/PTA_Train.tlog/CL.read.1.tlog
+/PTA_Train/Debug/PTA_Train.tlog/CL.command.1.tlog
+/PTA_Train/Debug/vc141.pdb
+/PTA_Train/Debug/vc141.idb
+/PTA_Train/Debug/PTA_Train.pch
+/PTA_Train/Debug/PTA_Train.obj
+/PTA_Train/Debug/PTA_Train.log
+/PTA_Train/Debug/pch.obj
+/PTA_Train/Debug/A1002 A+B for Polynomials.obj
+/PTA_Train/Debug/1026 程序运行时间.obj
+/PTA_Train/Debug/1016 部分A+B.obj
+/PTA_Train/Debug/1011 A+B 和 C.obj
+/PTA_Train/Debug/1001 害死人不偿命的(3n+1)猜想.obj
+/PTA_Train/PTA_Train.vcxproj.user
+/PTA_Train/PTA_Train.vcxproj.filters
+/PTA_Train/PTA_Train.vcxproj
+/Debug
+/.vs/PTA_Train/v15
+/PTA_Train/Debug/A1024 Palindromic Number.obj
+/PTA_Train/Debug/1046 划拳.obj
+/PTA_Train/Debug/1018 锤子剪刀布.obj
+/PTA_Train/Debug/1012 数字分类.obj
+/PTA_Train/Debug/1008 数组元素循环右移问题.obj
+/PTA_Train/Debug
+/PTA_Train
