注释掉所有代码(避免冲突) 删除define非必要代码

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,7 @@
 /PTA_Train/Debug/1008 数组元素循环右移问题.obj
 /PTA_Train/Debug
 /PTA_Train
+/x64/Debug/PTA_Train.pdb
+/x64/Debug/PTA_Train.ilk
+/x64/Debug/PTA_Train.exe
+/x64/Debug
